# 3DViewer_v1.0

./: README.md
src/: CMakeLists.txt  Makefile  glview.cpp  glview.h  glview.ui  s21_helpers.c  s21_helpers.h
src/tests/: s21_3D_C8_tests.c
